--- a/css/styles.css
+++ b/css/styles.css
@@ -20,11 +20,12 @@ navbar {
   display: block;
   width: 100%;
   height: 40px;
-  padding-top: 10px;
+  padding-top: 20px;
+  text-align: center;
 }
 
 .text-input {
-  width: 68%;
+  width: 65%;
   height: 30px;
   max-width: 500px;
   margin: 0 1%;
@@ -37,7 +38,7 @@ navbar {
 }
 
 .submit-btn {
-  width: 28%;
+  width: 25%;
   height: 30px;
   max-width: 155px;
   margin: 0 1%;
@@ -239,8 +240,8 @@ navbar {
   }
   .main-header {
     position: absolute;
-    top: -10px;
-    left: -15px;
+    top: 0px;
+    left: 0px;
     font-weight: 700;
   }
   .greeting-header {
